<resources>
    <string name="app_name">My Application</string>

    //bmi
    <string name="BMI_label">BMI Calculator</string>
    <string name="weight_label">Weight (kg):</string>
    <string name="height_label">Height (cm):</string>
    <string name="calculate_button">Calculate BMI</string>
    <string name="weight_hint">Enter weight</string>
    <string name="height_hint">Enter height</string>
    <string name="bmi_result">BMI: %.2f</string>
    <string name="category_label">Category: %s</string>
    <string name="height_error">Height must be greater than zero.</string>
    <string name="input_error">Invalid input. Please enter valid numbers.</string>
    <string name="empty_input">Please enter weight and height.</string>

    <string name="please_fill_fields">Please fill out both fields.</string>
    <string name="height_greater_zero">Height must be greater than zero.</string>
    <string name="invalid_input">Invalid input. Please enter numbers only.</string>
    <string name="error_processing_bmi">Error processing BMI data.</string>
    <string name="recipeName">Recipe Name</string>
    <string name="ingredients">ingredients</string>
    <string name="Method_Title">Method Title</string>
    <string name="recipe">Recipe</string>


    //calories
    <string-array name="activity_levels">
        <item>Select an activity level...</item>
        <item>Sedentary (little or no exercise)</item>
        <item>Lightly active (exercise 1–3 days/week)</item>
        <item>Moderately active (exercise 3–5 days/week)</item>
        <item>Active (exercise 6–7 days/week)</item>
        <item>Extremely active (hard exercise 6–7 days/week)</item>
    </string-array>

    //calories
    <string-array name="food_items">
        <item>Select a food...</item>
        <item>Key-In Food Manually</item>
        <item>Hamburger</item>
        <item>Salad</item>
        <item>Pizza</item>
    </string-array>

    //gender
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

</resources>